WeatherMCP: replace List.get(0) with getFirst() in WeatherToolService
Adopt the Java 21 SequencedCollection API for the first-element access in
WeatherToolService#fetchWeather. Equivalent semantics, more idiomatic.